# research-boilerplate

./: .editorconfig  .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  config.yaml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: ralph-backpressure.sh  ralph-session-start.sh  ralph-stop-hook.sh
.claude/skills/ralph/: SKILL.md
.claude/skills/ralph-cancel/: SKILL.md
.claude/skills/ralph-plan/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
scripts/: setup-tmux.sh
src/: main.py
tests/: test_main.py
